--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       width: 350px;
       margin: 0 auto;
       padding: 20px;
-      background: url('https://i.imgur.com/fJv3Xzm.png') center/cover no-repeat;
+      background: url('background.png') center/cover no-repeat;
       border-radius: 20px;
       box-shadow: 0 0 20px #ffcc00;
     }
