--- a/index.html
+++ b/index.html
@@ -1,114 +1,166 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <title>Encyclopédie IRL - MobileNet</title>
+  <meta charset="UTF-8" />
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+  />
+  <title>Encyclopédie IRL - COCO-SSD</title>
+
+  <!-- TFJS + COCO-SSD (meilleure détection objets) -->
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.10.0"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/mobilenet"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/coco-ssd@2.2.2"></script>
+
   <style>
+    :root{
+      --accent:#ffcc00;
+      --bg1:#1b1b1b;
+      --bg2:#2c2c2c;
+      --card:#222;
+    }
+    *{box-sizing:border-box}
+    html,body{height:100%}
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to bottom, #1b1b1b, #2c2c2c);
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      background: linear-gradient(to bottom, var(--bg1), var(--bg2));
       margin: 0;
-      overflow: hidden;
-      color: white;
+      color: #fff;
+      display:flex;
+      flex-direction:column;
     }
 
     h1 {
       text-align: center;
-      color: #ffcc00;
-      text-shadow: 1px 1px 5px black;
-      margin: 20px 0;
+      color: var(--accent);
+      text-shadow: 1px 1px 5px #000;
+      margin: 14px 8px;
+      font-size: clamp(20px, 4vw, 28px);
+    }
+
+    /* zone caméra + bouton */
+    .top {
+      width: 100%;
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+      gap:10px;
+      padding: 0 12px 8px;
     }
 
     .camera-wrapper {
       position: relative;
-      width: 350px;
+      width: min(92vw, 420px);
       margin: 0 auto;
-      padding: 20px;
-      background: url('background.png') center/cover no-repeat;
-      border-radius: 20px;
-      box-shadow: 0 0 20px #ffcc00;
+      padding: clamp(10px, 2.5vw, 20px);
+      background: url('background.png') center/cover no-repeat, #111;
+      border-radius: 16px;
+      box-shadow: 0 0 18px var(--accent);
+      border: 1px solid rgba(255,255,255,0.1);
     }
 
+    /* video responsive */
     video {
-      width: 300px;
-      height: 225px;
+      width: 100%;
+      height: auto;
+      aspect-ratio: 4/3;
+      background:#000;
       border-radius: 12px;
       display: block;
-      margin: 0 auto;
+    }
+
+    .controls{
+      display:flex;
+      gap:10px;
+      width:min(92vw, 420px);
+      justify-content:center;
+      align-items:center;
+      flex-wrap:wrap;
     }
 
     button {
-      display: block;
-      margin: 15px auto;
-      padding: 12px 25px;
-      font-size: 1em;
-      font-weight: bold;
+      padding: 12px 18px;
+      font-size: 1rem;
+      font-weight: 700;
       border: none;
-      border-radius: 8px;
+      border-radius: 10px;
       cursor: pointer;
-      background: #ffcc00;
+      background: var(--accent);
       color: #111;
-      box-shadow: 0 0 8px #ffcc00;
-      transition: 0.2s;
+      box-shadow: 0 0 10px var(--accent);
+      transition: transform .15s ease, box-shadow .15s ease, background .2s;
     }
-    button:hover {
-      background: #e6b800;
-      box-shadow: 0 0 12px #ffcc00;
+    button:hover { transform: translateY(-1px); box-shadow: 0 0 14px var(--accent); }
+    button:active { transform: translateY(0); }
+
+    .hint {
+      font-size: .9rem;
+      opacity:.9;
+      text-align:center;
+      margin-top: -4px;
+    }
+
+    /* zone collection scrollable */
+    .collection-wrap{
+      flex:1 1 auto;
+      min-height:0; /* crucial pour que le scroll prenne tout l’espace restant */
+      display:flex;
+      flex-direction:column;
+      padding: 4px 8px 8px;
+    }
+
+    h2 {
+      text-align:center;
+      color: var(--accent);
+      margin: 6px 0 8px;
+      font-size: clamp(16px, 3.5vw, 22px);
     }
 
     #collection {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      padding: 10px 10px 80px 10px; /* plus de padding-bottom pour scroll complet */
-      max-height: calc(100vh - 400px);
-      overflow-y: auto;
-      box-sizing: border-box;
-      margin-bottom: 20px;
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
+      gap: 12px;
+      padding: 8px 6px 90px; /* gros padding-bottom pour voir la dernière rangée */
+      overflow-y: auto;       /* scroll fluide */
+      border-top: 1px solid rgba(255,255,255,0.05);
+      border-bottom: 1px solid rgba(255,255,255,0.05);
     }
 
-    #collection::-webkit-scrollbar {
-    width: 8px;
-    }
-    #collection::-webkit-scrollbar-thumb {
-    background: #ffcc00;
-    border-radius: 4px;
-    }
-    #collection::-webkit-scrollbar-track {
-    background: #222;
-    border-radius: 4px;
-    }
+    #collection::-webkit-scrollbar{ width: 8px; }
+    #collection::-webkit-scrollbar-thumb{ background: var(--accent); border-radius: 4px; }
+    #collection::-webkit-scrollbar-track{ background: #111; border-radius: 4px; }
 
     .entry {
-      background: #222;
-      margin: 10px;
+      background: var(--card);
       padding: 10px;
       border-radius: 12px;
-      width: 130px;
       display: flex;
       flex-direction: column;
       align-items: center;
-      transition: transform 0.2s, box-shadow 0.2s;
+      gap:8px;
+      transition: transform 0.18s, box-shadow 0.18s;
       box-shadow: 0 0 5px #000;
       cursor: pointer;
+      border: 1px solid rgba(255,255,255,0.06);
     }
+    .entry:hover { transform: translateY(-3px); box-shadow: 0 0 12px var(--accent); }
+
     .entry img {
-      width: 100px;
-      height: 100px;
+      width: 100%;
+      aspect-ratio: 1;
       object-fit: cover;
       border-radius: 10px;
-      margin-bottom: 8px;
-      border: 2px solid #ffcc00;
+      border: 2px solid var(--accent);
+      background:#000;
     }
-    .entry:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 0 15px #ffcc00;
-    }
-    .entry b {
-      font-size: 0.95em;
+    .entry .name {
+      font-size: .95rem;
       text-align: center;
+      line-height:1.2;
+    }
+    .entry .score {
+      font-size: .8rem;
+      opacity:.8;
     }
 
     /* Cinématique */
@@ -116,195 +168,339 @@
       position: fixed;
       top: 50%;
       left: 50%;
-      transform: translate(-50%, -50%) scale(0);
-      width: 350px;
-      height: 200px;
+      transform: translate(-50%, -50%) scale(0.9);
+      width: min(92vw, 380px);
       background: rgba(0,0,0,0.85);
-      border: 2px solid #ffcc00;
-      border-radius: 15px;
-      display: flex;
+      border: 2px solid var(--accent);
+      border-radius: 16px;
+      display: none;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       z-index: 100;
-      transition: transform 0.5s ease, opacity 0.5s ease;
-      opacity: 0;
+      padding: 16px;
+      gap:10px;
     }
-
-    #cinematic img {
-      width: 120px;
-      height: 120px;
-      border-radius: 12px;
-      border: 2px solid #ffcc00;
-      margin-bottom: 10px;
-    }
-
     #cinematic.show {
-      transform: translate(-50%, -50%) scale(1);
-      opacity: 1;
+      display:flex;
+      animation: pop .45s ease forwards;
     }
-
+    @keyframes pop {
+      0% { transform: translate(-50%, -50%) scale(0.6); opacity:0 }
+      60%{ transform: translate(-50%, -50%) scale(1.05); opacity:1 }
+      100%{ transform: translate(-50%, -50%) scale(1) }
+    }
+    #cinematic img {
+      width: min(60vw, 140px);
+      aspect-ratio: 1;
+      border-radius: 12px;
+      border: 2px solid var(--accent);
+      background:#000;
+    }
     #cinematic b {
-      font-size: 1.2em;
-      color: #ffcc00;
+      font-size: 1.1rem;
+      color: var(--accent);
       text-shadow: 1px 1px 5px black;
+      text-align:center;
     }
 
-    /* Popup modal */
+    /* Popup */
     #popup {
       position: fixed;
-      top: 0; left: 0; right: 0; bottom: 0;
+      inset: 0;
       background: rgba(0,0,0,0.85);
       display: none;
       justify-content: center;
       align-items: center;
       z-index: 200;
+      padding: 14px;
     }
     #popup-content {
-      background: #222;
-      padding: 20px;
-      border-radius: 15px;
+      background: var(--card);
+      padding: 18px;
+      border-radius: 16px;
       text-align: center;
-      max-width: 90%;
-      max-height: 80%;
+      width: min(92vw, 620px);
+      max-height: 85vh;
       overflow-y: auto;
+      border: 1px solid rgba(255,255,255,0.06);
+      box-shadow: 0 8px 24px rgba(0,0,0,0.5);
     }
     #popup-content img {
-      max-width: 300px;
+      width: min(80vw, 360px);
+      max-width: 100%;
       border-radius: 12px;
-      border: 2px solid #ffcc00;
+      border: 2px solid var(--accent);
       margin-bottom: 10px;
+      background:#000;
     }
     #popup-content h2 {
-      color: #ffcc00;
-      margin-bottom: 10px;
+      color: var(--accent);
+      margin: 8px 0 6px;
+      line-height:1.2;
     }
     #popup-content p {
       color: #f0f0f0;
+      text-align:left;
+      white-space:pre-wrap;
     }
     #popup-close {
-      margin-top: 15px;
-      padding: 8px 15px;
-      background: #ffcc00;
+      margin-top: 14px;
+      padding: 10px 16px;
+      background: var(--accent);
       color: #111;
       border: none;
-      border-radius: 6px;
+      border-radius: 8px;
       cursor: pointer;
-      font-weight: bold;
+      font-weight: 800;
+    }
+
+    /* petits écrans: resserrer la grille */
+    @media (max-width: 420px){
+      #collection{ grid-template-columns: repeat(auto-fill, minmax(110px, 1fr)); }
     }
   </style>
 </head>
 <body>
 
-<h1>📸 Encyclopédie IRL</h1>
+  <h1>📸 Encyclopédie IRL</h1>
 
-<div class="camera-wrapper">
-  <video id="camera" autoplay></video>
-</div>
-<button id="captureBtn">Prendre photo</button>
-
-<h2 style="text-align:center; color:#ffcc00;">📚 Ma collection</h2>
-<div id="collection"></div>
-
-<!-- Cinématique -->
-<div id="cinematic">
-  <img id="cinematic-img" src="">
-  <b id="cinematic-name"></b>
-</div>
-
-<!-- Popup modal -->
-<div id="popup">
-  <div id="popup-content">
-    <img id="popup-img" src="">
-    <h2 id="popup-name"></h2>
-    <p id="popup-desc">Chargement de la description...</p>
-    <button id="popup-close">Fermer</button>
+  <div class="top">
+    <div class="camera-wrapper">
+      <!-- playsinline + muted aident iOS à ne pas passer en plein écran -->
+      <video id="camera" autoplay playsinline muted></video>
+    </div>
+    <div class="controls">
+      <button id="captureBtn">Scanner</button>
+      <button id="switchCamBtn" title="Basculer caméra">🔁 Caméra</button>
+    </div>
+    <div class="hint">Astuce : utilise en HTTPS + accepte la permission caméra. Sur mobile, on force la caméra arrière.</div>
   </div>
-</div>
+
+  <div class="collection-wrap">
+    <h2>📚 Ma collection</h2>
+    <div id="collection"></div>
+  </div>
+
+  <!-- Cinématique -->
+  <div id="cinematic">
+    <img id="cinematic-img" alt="">
+    <b id="cinematic-name"></b>
+  </div>
+
+  <!-- Popup -->
+  <div id="popup">
+    <div id="popup-content">
+      <img id="popup-img" alt="">
+      <h2 id="popup-name"></h2>
+      <p id="popup-desc">Chargement…</p>
+      <button id="popup-close">Fermer</button>
+    </div>
+  </div>
 
 <script>
-let model;
-let encyclopedia = [];
+let model;                 // COCO-SSD
+let encyclopedia = [];     // { id, name, score, img, labels[] }
+let currentStream = null;
+let useBackCamera = true;  // caméra arrière par défaut
+
+// petites corrections nom -> FR pour Wikipedia fr
+const labelCorrections = {
+  "cell phone": "smartphone",
+  "tv": "télévision",
+  "backpack": "sac à dos",
+  "couch": "canapé",
+  "bottle": "bouteille",
+  "cup": "tasse",
+  "bird": "oiseau",
+  "cat": "chat",
+  "dog": "chien",
+  "laptop": "ordinateur portable",
+  "keyboard": "clavier",
+  "mouse": "souris",
+  "remote": "télécommande",
+  "sports ball": "ballon de sport",
+  "dining table": "table à manger"
+};
 
 async function init() {
-  model = await mobilenet.load();
-  console.log("✅ MobileNet prêt");
+  try {
+    model = await cocoSsd.load(); // charge COCO-SSD
+    console.log("✅ COCO-SSD prêt");
+  } catch (e) {
+    console.error("Erreur modèle :", e);
+    alert("Erreur lors du chargement du modèle. Recharge la page.");
+    return;
+  }
+  await startCamera();
+}
+
+async function startCamera() {
+  // stop anciens tracks si on switch
+  if (currentStream) currentStream.getTracks().forEach(t => t.stop());
+
+  const constraints = {
+    audio: false,
+    video: {
+      facingMode: useBackCamera ? { ideal: "environment" } : "user",
+      width: { ideal: 1280 },
+      height: { ideal: 720 }
+    }
+  };
 
   try {
-    const stream = await navigator.mediaDevices.getUserMedia({ video: true });
-    document.getElementById("camera").srcObject = stream;
+    const stream = await navigator.mediaDevices.getUserMedia(constraints);
+    currentStream = stream;
+    const video = document.getElementById("camera");
+    video.srcObject = stream;
+    await video.play();
   } catch (e) {
     console.error("Erreur caméra :", e);
+    alert("Impossible d'accéder à la caméra. Vérifie les permissions et que le site est en HTTPS.");
   }
 }
 
+document.getElementById("switchCamBtn").addEventListener("click", async () => {
+  useBackCamera = !useBackCamera;
+  await startCamera();
+});
+
 document.getElementById("captureBtn").addEventListener("click", async () => {
   const video = document.getElementById("camera");
+  if (!model || !video.videoWidth) {
+    alert("Caméra ou modèle non prêt.");
+    return;
+  }
 
+  // capture frame
   const canvas = document.createElement("canvas");
   canvas.width = video.videoWidth;
   canvas.height = video.videoHeight;
-  canvas.getContext("2d").drawImage(video, 0, 0);
+  const ctx = canvas.getContext("2d");
+  ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
 
-  const predictions = await model.classify(canvas);
-  if (!predictions.length) return alert("Objet non reconnu 😅");
+  // détection objets (plus fiable que MobileNet)
+  let detections = [];
+  try {
+    detections = await model.detect(canvas);
+  } catch (e) {
+    console.error("Erreur detection:", e);
+    alert("Erreur de détection. Réessaie.");
+    return;
+  }
 
-  const bestGuess = predictions[0].className;
+  if (!detections.length) {
+    alert("Rien détecté 😅");
+    return;
+  }
 
-  encyclopedia = encyclopedia.filter(e => e.name !== bestGuess);
-  encyclopedia.unshift({ name: bestGuess, img: canvas.toDataURL() });
+  // garder la meilleure détection (score max) pour l’encyclopédie
+  detections.sort((a,b)=> b.score - a.score);
+  const top = detections[0];
+  const scorePct = Math.round(top.score * 100);
+  const rawName = top.class; // ex: "dining table"
+  const bestName = (labelCorrections[rawName] || rawName).trim();
+
+  // stocker l'image + labels alternatifs (top 3)
+  const labels = detections.slice(0,3).map(d => (labelCorrections[d.class] || d.class));
+  const id = bestName.toLowerCase();
+
+  // remonter si déjà présent
+  encyclopedia = encyclopedia.filter(e => e.id !== id);
+  encyclopedia.unshift({
+    id,
+    name: bestName,
+    score: scorePct,
+    img: canvas.toDataURL("image/jpeg", 0.9),
+    labels
+  });
+
   updateCollection();
 
   // Cinématique
-  const cinematic = document.getElementById("cinematic");
-  document.getElementById("cinematic-img").src = canvas.toDataURL();
-  document.getElementById("cinematic-name").textContent = bestGuess;
-  cinematic.classList.add("show");
-  setTimeout(() => cinematic.classList.remove("show"), 2000);
+  showCinematic( encyclopedia[0].img, `${bestName} (${scorePct}%)` );
 });
 
+function showCinematic(img, name){
+  const c = document.getElementById("cinematic");
+  document.getElementById("cinematic-img").src = img;
+  document.getElementById("cinematic-name").textContent = name;
+  c.classList.add("show");
+  setTimeout(()=> c.classList.remove("show"), 1800);
+}
+
+// Update UI liste
 function updateCollection() {
   const container = document.getElementById("collection");
   container.innerHTML = "";
   encyclopedia.forEach(item => {
     const div = document.createElement("div");
     div.className = "entry";
-    div.innerHTML = `<img src="${item.img}"><b>${item.name}</b>`;
+    div.innerHTML = `
+      <img src="${item.img}" alt="">
+      <div class="name">${item.name}</div>
+      <div class="score">Confiance: ${item.score}%</div>
+    `;
     container.appendChild(div);
 
-    div.addEventListener("click", async () => {
-      document.getElementById("popup-img").src = item.img;
-      document.getElementById("popup-name").textContent = item.name;
-
-      // Récupération description Wikipedia (premier nom si plusieurs)
-      const query = item.name.split(",")[0];
-      const descEl = document.getElementById("popup-desc");
-      descEl.textContent = "Chargement de la description...";
-
-      try {
-        const response = await fetch(`https://fr.wikipedia.org/api/rest_v1/page/summary/${encodeURIComponent(query)}`);
-        if(response.ok){
-          const data = await response.json();
-          descEl.textContent = data.extract || "Aucune description disponible.";
-        } else {
-          descEl.textContent = "Aucune description disponible.";
-        }
-      } catch(e) {
-        descEl.textContent = "Erreur de récupération.";
-      }
-
-      document.getElementById("popup").style.display = "flex";
-    });
+    // open popup on click
+    div.addEventListener("click", () => openPopup(item));
   });
 }
 
-// Fermeture popup
-document.getElementById("popup-close").addEventListener("click", () => {
+async function openPopup(item){
+  document.getElementById("popup-img").src = item.img;
+  document.getElementById("popup-name").textContent = item.name;
+  const descEl = document.getElementById("popup-desc");
+  descEl.textContent = "Chargement…";
+
+  // On tente : 1) label FR corrigé, 2) label brut, 3) 2e/3e labels, 4) fallback EN
+  const tryLabels = [];
+  // priorité au label principal + variantes
+  tryLabels.push(item.name);
+  const rawFirst = item.labels?.[0] || item.name;
+  if (!tryLabels.includes(rawFirst)) tryLabels.push(rawFirst);
+  // autres candidats
+  (item.labels || []).slice(1,3).forEach(l=>{
+    if(!tryLabels.includes(l)) tryLabels.push(l);
+  });
+
+  let description = null;
+  // Essayons fr.wikipedia
+  for (const q of tryLabels){
+    const cleaned = q.replace(/_/g, " ").split(",")[0].trim();
+    const ok = await fetchSummary(cleaned, "fr");
+    if (ok){ description = ok; break; }
+  }
+  // fallback en.wikipedia si rien en FR
+  if (!description){
+    for (const q of tryLabels){
+      const cleaned = q.replace(/_/g, " ").split(",")[0].trim();
+      const ok = await fetchSummary(cleaned, "en");
+      if (ok){ description = ok; break; }
+    }
+  }
+
+  descEl.textContent = description || "Aucune description disponible.";
+
+  document.getElementById("popup").style.display = "flex";
+}
+
+async function fetchSummary(term, lang){
+  try{
+    const resp = await fetch(`https://${lang}.wikipedia.org/api/rest_v1/page/summary/${encodeURIComponent(term)}`);
+    if(!resp.ok) return null;
+    const data = await resp.json();
+    if (data && data.extract) return data.extract;
+    return null;
+  }catch(e){ return null; }
+}
+
+document.getElementById("popup-close").addEventListener("click", ()=>{
   document.getElementById("popup").style.display = "none";
 });
 
 init();
 </script>
-
 </body>
 </html>
